Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.7
-
None
-
-
3
-
1f1a41b61 (dev), f6b124885 (6.9), 937afe8cc (6.8), d0e374f64 (tqtc/lts-6.5), 812676bee (tqtc/lts-5.15)
-
Foundation Sprint 121
Description
The QSerialPort class under unix has some code to emulate mark/space parity on systems that don't define CMSPAR by toggling between odd and even parity for each byte. As it stands now, it doesn't work at all. As soon as you set parity to mark or space on these platforms (FreeBSD in my test case), the writePerChar function ends up recursive due to the flush call and eventually segfaults. Looks like this is due to a later change to make flush() non-blocking
Attachments
Issue Links
- resulted in
-
QTBUG-131679 QSerialPort does not have Mark/Space parity emulation for reading the data
- Reported